--- a/poff-info602-final.ipynb
+++ b/poff-info602-final.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 289,
    "id": "7cc55b5a-f65a-456e-a105-7fa232a125b4",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T20:53:00.476990400Z",
-     "start_time": "2024-02-17T20:53:00.433281700Z"
+     "end_time": "2024-02-17T22:33:53.703647800Z",
+     "start_time": "2024-02-17T22:33:53.065780500Z"
     }
    },
    "outputs": [],
@@ -33,6 +33,13 @@
     "import spacy\n",
     "import string\n",
     "from IPython.display import display, Markdown\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier, RidgeClassifier\n",
+    "from sklearn.naive_bayes import ComplementNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier, NearestCentroid\n",
+    "from sklearn.svm import LinearSVC\n",
     "\n",
     "_ = nltk.download('averaged_perceptron_tagger', quiet=True)\n",
     "_ = nltk.download('wordnet', quiet=True)"
@@ -50,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 286,
    "id": "b92620cf866fdea1",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T20:53:00.588665100Z",
-     "start_time": "2024-02-17T20:53:00.480304300Z"
+     "end_time": "2024-02-17T22:18:31.205627500Z",
+     "start_time": "2024-02-17T22:18:31.111051400Z"
     }
    },
    "outputs": [
@@ -121,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 292,
    "id": "72acb96e5a0ed791",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T21:09:00.489974700Z",
-     "start_time": "2024-02-17T21:08:29.975555700Z"
+     "end_time": "2024-02-17T22:41:47.629554500Z",
+     "start_time": "2024-02-17T22:40:51.464703800Z"
     }
    },
    "outputs": [],
@@ -145,6 +152,13 @@
     "\n",
     "# Convert the data in the content column to lowercase\n",
     "data['content'] = data['content'].str.lower()\n",
+    "\n",
+    "# Perform sentence tokenization\n",
+    "def sentence_tokenize(text):\n",
+    "    doc = nlp(text)\n",
+    "    sentences = [sent.text for sent in doc.sents]\n",
+    "    return sentences\n",
+    "data['sentences'] = data['content'].apply(sentence_tokenize)\n",
     "\n",
     "# Handle abbreviations in the data that align with stopwords\n",
     "def replace_abbreviations(text):\n",
@@ -194,7 +208,9 @@
     "        if len(word) > 1:\n",
     "            result.append(word)\n",
     "    return result\n",
-    "data['words'] = data['words'].apply(remove_short_tokens)"
+    "data['words'] = data['words'].apply(remove_short_tokens)\n",
+    "\n",
+    "data['joined_words'] = data['words'].apply(lambda x: ' '.join(x))\n"
    ]
   },
   {
@@ -449,6 +465,88 @@
     "    plt.title(category, fontsize=20)\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Fitting Models\n",
+    "\n",
+    "### Tfidf Vectorization "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6e27e0d3d3f506c6"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Split the data into test and training datasets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    data['joined_words'], \n",
+    "    data['category'], \n",
+    "    test_size=0.2, \n",
+    "    random_state=42, \n",
+    "    stratify=data['category']\n",
+    ")\n",
+    "\n",
+    "# Initialize the TfidfVectorizer\n",
+    "vectorizer = TfidfVectorizer(\n",
+    "    sublinear_tf=True, \n",
+    "    max_df=0.5,\n",
+    "    min_df=5, \n",
+    "    stop_words=\"english\"\n",
+    "    )\n",
+    "\n",
+    "# Fit on and transform the training data\n",
+    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "\n",
+    "# Transform the test data\n",
+    "X_test_tfidf = vectorizer.transform(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-17T22:44:23.266121300Z",
+     "start_time": "2024-02-17T22:44:23.127540300Z"
+    }
+   },
+   "id": "ddc48c93c1446d02",
+   "execution_count": 296
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "for clf, name in (\n",
+    "    (LogisticRegression(C=5, max_iter=1000), \"Logistic Regression\"),\n",
+    "    (RidgeClassifier(alpha=1.0, solver=\"sparse_cg\"), \"Ridge Classifier\"),\n",
+    "    (KNeighborsClassifier(n_neighbors=100), \"kNN\"),\n",
+    "    (RandomForestClassifier(), \"Random Forest\"),\n",
+    "    # L2 penalty Linear SVC\n",
+    "    (LinearSVC(C=0.1, dual=False, max_iter=1000), \"Linear SVC\"),\n",
+    "    # L2 penalty Linear SGD\n",
+    "    (\n",
+    "        SGDClassifier(\n",
+    "            loss=\"log_loss\", alpha=1e-4, n_iter_no_change=3, early_stopping=True\n",
+    "        ),\n",
+    "        \"log-loss SGD\",\n",
+    "    ),\n",
+    "    # NearestCentroid (aka Rocchio classifier)\n",
+    "    (NearestCentroid(), \"NearestCentroid\"),\n",
+    "    # Sparse naive Bayes classifier\n",
+    "    (ComplementNB(alpha=0.1), \"Complement naive Bayes\"),\n",
+    "):\n",
+    "    print(\"=\" * 80)\n",
+    "    print(name)\n",
+    "    results.append(benchmark(clf, name))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4a9b941c24e91a21"
   }
  ],
  "metadata": {
