Finished modeling using the SKL CBOW examples to benchmark eight different models with and without cross validation.

--- a/poff-info602-final.ipynb
+++ b/poff-info602-final.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 390,
    "id": "7cc55b5a-f65a-456e-a105-7fa232a125b4",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T22:33:53.703647800Z",
-     "start_time": "2024-02-17T22:33:53.065780500Z"
+     "end_time": "2024-02-18T04:21:43.800543100Z",
+     "start_time": "2024-02-18T04:21:43.674437400Z"
     }
    },
    "outputs": [],
@@ -32,6 +32,7 @@
     "from wordcloud import WordCloud\n",
     "import spacy\n",
     "import string\n",
+    "import numpy as np\n",
     "from IPython.display import display, Markdown\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -40,6 +41,9 @@
     "from sklearn.naive_bayes import ComplementNB\n",
     "from sklearn.neighbors import KNeighborsClassifier, NearestCentroid\n",
     "from sklearn.svm import LinearSVC\n",
+    "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
+    "from sklearn.metrics import accuracy_score, recall_score, precision_score, make_scorer\n",
+    "\n",
     "\n",
     "_ = nltk.download('averaged_perceptron_tagger', quiet=True)\n",
     "_ = nltk.download('wordnet', quiet=True)"
@@ -471,7 +475,24 @@
    "source": [
     "## Fitting Models\n",
     "\n",
-    "### Tfidf Vectorization "
+    "### Bag of Words\n",
+    "Adapted from examples contained in the [scikit-learn user documentation](https://scikit-learn.org/stable/auto_examples/text/plot_document_classification_20newsgroups.html#sphx-glr-auto-examples-text-plot-document-classification-20newsgroups-py)\n",
+    "\n",
+    "The [bag-of-words model](https://en.wikipedia.org/wiki/Bag-of-words_model) is a model of text which uses a representation of text that is based on an unordered collection (or \"bag\") of words.\n",
+    "\n",
+    "This exercise will train and test eight different models and evaluate their effectiveness at properly classifying articles. Articles in this example are vectorized using TF-IDF.\n",
+    "\n",
+    "The models being tested are:\n",
+    "   *  Logistic Regression\n",
+    "   *  Ridge Classification\n",
+    "   *  K Nearest Neighbor\n",
+    "   *  Random Forest\n",
+    "   *  Linear Support Vector Classification (SVC)\n",
+    "   *  Log Loss Stochastic Gradient Descent (SGD)\n",
+    "   *  Nearest Centroid a.k.a. Rocchio Classifier\n",
+    "   *  Complement Nayive Bayes Classifier\n",
+    "\n",
+    "The first step is to split and vectorize the data."
    ],
    "metadata": {
     "collapsed": false
@@ -500,26 +521,176 @@
     "    )\n",
     "\n",
     "# Fit on and transform the training data\n",
-    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "X_train = vectorizer.fit_transform(X_train)\n",
     "\n",
     "# Transform the test data\n",
-    "X_test_tfidf = vectorizer.transform(X_test)"
+    "X_test = vectorizer.transform(X_test)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T22:44:23.266121300Z",
-     "start_time": "2024-02-17T22:44:23.127540300Z"
+     "end_time": "2024-02-18T04:21:11.213296200Z",
+     "start_time": "2024-02-18T04:21:11.108037500Z"
     }
    },
    "id": "ddc48c93c1446d02",
-   "execution_count": 296
+   "execution_count": 387
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now create a benchmark function to fit and test the effectiveness of each model, then run each model through the benchmark. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c47e1703580c2207"
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Logistic Regression**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 56.45%\nPrecision: 22.95%\nRecall: 26.41%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Ridge Classifier**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 53.23%\nPrecision: 22.91%\nRecall: 25.39%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**kNN**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 45.16%\nPrecision: 6.45%\nRecall: 14.29%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Random Forest**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 53.23%\nPrecision: 27.38%\nRecall: 24.12%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Linear SVC**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 50.00%\nPrecision: 21.43%\nRecall: 18.67%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Log-Loss SGD**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 51.61%\nPrecision: 35.29%\nRecall: 26.41%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Nearest Centroid**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 51.61%\nPrecision: 34.74%\nRecall: 33.86%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Complement Naive Bayes**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 50.00%\nPrecision: 24.78%\nRecall: 28.76%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "results = []\n",
+    "# Helper function to benchmark models \n",
+    "def benchmark(clf, custom_name=False):\n",
+    "    name = custom_name if custom_name else clf.__class__.__name__\n",
+    "    display(Markdown(f\"___\\n**{name}**\"))    \n",
+    "    clf.fit(X_train, y_train)\n",
+    "    pred = clf.predict(X_test)\n",
+    "    display(Markdown(f\"Accuracy: {accuracy_score(y_test,pred)*100:.2f}%\\n\"\n",
+    "                     f\"Precision: {precision_score(y_test,pred,average='macro', zero_division=0)*100:.2f}%\\n\"\n",
+    "                     f\"Recall: {recall_score(y_test,pred,average='macro') * 100:.2f}%\")) \n",
+    "\n",
+    "# Benchmark the eight models\n",
     "for clf, name in (\n",
     "    (LogisticRegression(C=5, max_iter=1000), \"Logistic Regression\"),\n",
     "    (RidgeClassifier(alpha=1.0, solver=\"sparse_cg\"), \"Ridge Classifier\"),\n",
@@ -532,21 +703,254 @@
     "        SGDClassifier(\n",
     "            loss=\"log_loss\", alpha=1e-4, n_iter_no_change=3, early_stopping=True\n",
     "        ),\n",
-    "        \"log-loss SGD\",\n",
+    "        \"Log-Loss SGD\",\n",
     "    ),\n",
     "    # NearestCentroid (aka Rocchio classifier)\n",
-    "    (NearestCentroid(), \"NearestCentroid\"),\n",
+    "    (NearestCentroid(), \"Nearest Centroid\"),\n",
     "    # Sparse naive Bayes classifier\n",
-    "    (ComplementNB(alpha=0.1), \"Complement naive Bayes\"),\n",
+    "    (ComplementNB(alpha=0.1), \"Complement Naive Bayes\"),\n",
     "):\n",
-    "    print(\"=\" * 80)\n",
-    "    print(name)\n",
-    "    results.append(benchmark(clf, name))"
+    "    benchmark(clf,name)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-18T04:21:24.818121500Z",
+     "start_time": "2024-02-18T04:21:24.264686700Z"
+    }
+   },
+   "id": "e5d8fe8ffc0e1763",
+   "execution_count": 389
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c627bb040512e35c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Evaluation**\n",
+    "The results from this test reveal a general trend of poor performance, evidenced by low accuracy scores across the board and very low precision and recall scores. These figures surpass the accuracy of zero-shot classification, and are better than random; however, this model is not in a state to be relied upon for practical deployment.\n",
+    "\n",
+    "Exploratory data analysis reveals a heavy class imbalance, which is likely impacting these scores, and suggests cross validation may improve scores. "
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "4a9b941c24e91a21"
+   "id": "d220739bb59693cd"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Bag of Words with Cross Validation\n",
+    "This analysis will perform the same benchmarking of models as before, but this time will include cross validation to account for class imbalances and lack of data."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fa6c0908da5f987f"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Logistic Regression**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 46.77%\nPrecision: 32.69%\nRecall: 20.04%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Ridge Classifier**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 48.38%\nPrecision: 30.75%\nRecall: 22.53%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**kNN**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 44.35%\nPrecision: 6.34%\nRecall: 14.29%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Random Forest**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 47.18%\nPrecision: 24.64%\nRecall: 18.85%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Linear SVC**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 45.16%\nPrecision: 18.29%\nRecall: 15.43%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Log-Loss SGD**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 46.77%\nPrecision: 41.01%\nRecall: 31.29%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Nearest Centroid**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 49.20%\nPrecision: 46.19%\nRecall: 38.54%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "___\n**Complement Naive Bayes**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Accuracy: 47.17%\nPrecision: 45.17%\nRecall: 42.89%"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Adjusted benchmark function to use cross_validate with StratifiedKFold\n",
+    "def cv_benchmark(clf, custom_name=False, n_splits=3):\n",
+    "    name = custom_name if custom_name else clf.__class__.__name__\n",
+    "    display(Markdown(f\"___\\n**{name}**\"))\n",
+    "\n",
+    "    # Define scorers\n",
+    "    scoring = {'accuracy': make_scorer(accuracy_score),\n",
+    "               'precision': make_scorer(precision_score, average='macro', zero_division=0),\n",
+    "               'recall': make_scorer(recall_score, average='macro')}\n",
+    "    \n",
+    "    # Perform cross-validation\n",
+    "    cv_results = cross_validate(clf, X_train, y_train, cv=StratifiedKFold(n_splits=n_splits), scoring=scoring)\n",
+    "    \n",
+    "    # Calculate mean scores\n",
+    "    accuracy = np.mean(cv_results['test_accuracy']) * 100\n",
+    "    precision = np.mean(cv_results['test_precision']) * 100\n",
+    "    recall = np.mean(cv_results['test_recall']) * 100\n",
+    "    \n",
+    "    # Display results\n",
+    "    display(Markdown(f\"Accuracy: {accuracy:.2f}%\\n\"\n",
+    "                     f\"Precision: {precision:.2f}%\\n\"\n",
+    "                     f\"Recall: {recall:.2f}%\"))\n",
+    "    \n",
+    "for clf, name in (\n",
+    "    (LogisticRegression(C=5, max_iter=1000), \"Logistic Regression\"),\n",
+    "    (RidgeClassifier(alpha=1.0, solver=\"sparse_cg\"), \"Ridge Classifier\"),\n",
+    "    (KNeighborsClassifier(n_neighbors=100), \"kNN\"),\n",
+    "    (RandomForestClassifier(), \"Random Forest\"),\n",
+    "    # L2 penalty Linear SVC\n",
+    "    (LinearSVC(C=0.1, dual=False, max_iter=1000), \"Linear SVC\"),\n",
+    "    # L2 penalty Linear SGD\n",
+    "    (\n",
+    "        SGDClassifier(\n",
+    "            loss=\"log_loss\", alpha=1e-4, n_iter_no_change=3, early_stopping=True\n",
+    "        ),\n",
+    "        \"Log-Loss SGD\",\n",
+    "    ),\n",
+    "    # NearestCentroid (aka Rocchio classifier)\n",
+    "    (NearestCentroid(), \"Nearest Centroid\"),\n",
+    "    # Sparse naive Bayes classifier\n",
+    "    (ComplementNB(alpha=0.1), \"Complement Naive Bayes\"),\n",
+    "):\n",
+    "    cv_benchmark(clf,name)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-18T04:30:15.464476500Z",
+     "start_time": "2024-02-18T04:30:13.773431100Z"
+    }
+   },
+   "id": "852672380fa0d9d",
+   "execution_count": 405
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Evaluation**\n",
+    "Cross validation slightly decreased accuracy for the models, but also slightly increased precision and recall for several models, in others it remained the same. Overall, cross validation did not improve model performance nor make it more ready for deployment. Interestingly, without cross validation the random forest model performed best; however, with cross validation nearest centroid stood out. Overall nearest centroid with validation performs best overall, yet is still not effective enough for practical use."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6492c5ef56b1484c"
   }
  ],
  "metadata": {
