Everything is setup for OpenAI Zero-Shot classification, haven't run yet. Before I do I want to make sure I'm not making a mistake in BART.

--- a/poff-info602-final.ipynb
+++ b/poff-info602-final.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "id": "5b330c7e4f53efee",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-01T03:34:10.394408400Z",
-     "start_time": "2024-03-01T03:34:10.154148900Z"
-    },
-    "collapsed": false
+     "end_time": "2024-03-01T05:08:03.778756300Z",
+     "start_time": "2024-03-01T05:08:03.589218400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -62,6 +62,7 @@
     "from sklearn.naive_bayes import *\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, log_loss, confusion_matrix\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sentence_transformers import SentenceTransformer\n",
     "import numpy as np\n",
     "import plotly_express as px\n",
@@ -69,6 +70,10 @@
     "import tiktoken\n",
     "from openai import OpenAI\n",
     "from transformers import pipeline\n",
+    "from dotenv import load_dotenv\n",
+    "import json\n",
+    "\n",
+    "load_dotenv()\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -1826,7 +1831,6 @@
     "true_labels = bdata['category'].tolist()\n",
     "\n",
     "# Ensure true labels are encoded to match the candidate labels' order for log loss calculation\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(candidate_labels)\n",
     "true_labels_encoded = label_encoder.transform(true_labels)\n",
@@ -1868,14 +1872,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "3436a163c186fee7",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T05:17:21.416375600Z",
+     "start_time": "2024-03-01T05:17:15.136518800Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                               content  \\\n194  the usa department of state has announced mone...   \n157  a 42 year old belarusian and cypriot national ...   \n225  february 15  2024press releasesan francisco  f...   \n\n                      category                       oai-zero-category  \\\n194  news and industry updates               news and industry updates   \n157  news and industry updates  emerging threats and attack techniques   \n225                  marketing               news and industry updates   \n\n                                       oai-zero-scores  \n194  {\"vulnerability reports\": 0.4, \"security updat...  \n157  {\"vulnerability reports\": 0.0, \"security updat...  \n225  {\"vulnerability reports\": 0.05, \"security upda...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>content</th>\n      <th>category</th>\n      <th>oai-zero-category</th>\n      <th>oai-zero-scores</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>194</th>\n      <td>the usa department of state has announced mone...</td>\n      <td>news and industry updates</td>\n      <td>news and industry updates</td>\n      <td>{\"vulnerability reports\": 0.4, \"security updat...</td>\n    </tr>\n    <tr>\n      <th>157</th>\n      <td>a 42 year old belarusian and cypriot national ...</td>\n      <td>news and industry updates</td>\n      <td>emerging threats and attack techniques</td>\n      <td>{\"vulnerability reports\": 0.0, \"security updat...</td>\n    </tr>\n    <tr>\n      <th>225</th>\n      <td>february 15  2024press releasesan francisco  f...</td>\n      <td>marketing</td>\n      <td>news and industry updates</td>\n      <td>{\"vulnerability reports\": 0.05, \"security upda...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "zoaidata = pd.DataFrame(data[['content', 'category']])\n",
+    "zodata = pd.DataFrame(data[['content', 'category']])\n",
     "\n",
     "candidate_labels = ['vulnerability reports',\n",
     "                    'security updates and patches',\n",
@@ -1883,7 +1901,31 @@
     "                    'regulatory changes and compliance',\n",
     "                    'data breaches and security incidents',\n",
     "                    'news and industry updates',\n",
-    "                    'marketing']"
+    "                    'marketing']\n",
+    "\n",
+    "sys_msg = instruction = \"\"\"\n",
+    "analyze an article's content to determine its fit across predefined categories: 'vulnerability reports', 'security updates and patches', 'emerging threats and attack techniques', 'regulatory changes and compliance', 'data breaches and security incidents', 'news and industry updates', 'marketing'. output a json dictionary with categories as keys and the probability (as a floating point number) of the article belonging to each category as values. ensure the probabilities sum up to no more than 1, with the highest probability indicating the primary classification. always output all seven categories, even if they have a zero probability.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "def get_oai_zero_shot(content):\n",
+    "    response = client.chat.completions.create(\n",
+    "  seed=42,\n",
+    "  model=\"gpt-3.5-turbo-0125\",\n",
+    "  response_format={ \"type\": \"json_object\" },\n",
+    "  messages=[\n",
+    "    {\"role\": \"system\", \"content\": sys_msg},\n",
+    "    {\"role\": \"user\", \"content\": content}\n",
+    "  ]\n",
+    ")\n",
+    "    zoai_probs = json.loads(response.choices[0].message.content)\n",
+    "    category = max(zoai_probs, key=zoai_probs.get)\n",
+    "    return pd.Series([category, json.dumps(zoai_probs)])\n",
+    "\n",
+    "subset = zodata.sample(n=3, random_state=42)\n",
+    "\n",
+    "zodata[['oai-zero-category', 'oai-zero-scores']] = subset['content'].apply(get_oai_zero_shot) \n",
+    "zodata.to_csv('./data/zeroOaiData.csv')\n"
    ]
   },
   {
